# iloveapi-python

./: pyproject.toml
iloveapi/: iloveapi.py  rest.py
